[project]
authors = [{name = "Luke Miner", email = "lminer@users.noreply.github.com"}]
dependencies = []
description = "Add a short description here"
name = "pixilfsbug"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixilfsbug = { path = ".", editable = true }
lfsbug = { git = "ssh://git@github.com/lminer/lfsbug.git" }

[tool.pixi.tasks]
